@@ -17,6 +17,7 @@ Revision history for FusionInventory::Agent
          http://forum.fusioninventory.org/viewtopic.php?id=278
        * Document NETWORKS/{BSSID,SSID}
        * Add VIRTUALMACHINES/COMMENT and OWNER keys
+       * VirtualBox: major rewrite of the mostly broken Vbox mod
 
 2.1.8_rc1  Sat, 05 Mar 2011 14:56:58 +0100
        * Linux, correctly read the number of core from /proc/cpuinfo
